# qaio

./: CMakeLists.txt  README.md  compile.sh  设计.md
async/: CMakeLists.txt  job.h  service.cpp  service.h  service_registry.cpp  service_registry.h  service_threadpool.h
core/: CMakeLists.txt  duh.cpp  error.h  eventloop.cpp  eventloop.h  io_event.cpp  io_event.h  liaison.h  poller.cpp  poller.h  qsock.cpp  qsock.h  reactor_threadpool.h  thr.h  thread.cpp  thread.h  time.h
example/: CMakeLists.txt
highermq/: CMakeLists.txt
include/: qaio.h
posix/: CMakeLists.txt
posix/fileio/: CMakeLists.txt  bufwriter.h  fileutils.cpp  fileutils.h  membuf.h  mmap_handle.cpp  mmap_handle.h  preader.cpp  preader.h  reader.cpp  reader.h  resource_cap.cpp  resource_cap.h  writer.cpp  writer.h
posix/network/: CMakeLists.txt  efd.cpp  efd.h  epoller.cpp  epoller.h  eventfd.cpp  eventfd.h  tcp.h
posix/tcp/: CMakeLists.txt  tcp.cpp  tcp.h
reactor/: CMakeLists.txt  event.h  eventloop.cpp  eventloop.h  io_event.cpp  io_event.h  sync_event.h  thread.cpp  threadpool.cpp  timer_event.h
service/: CMakeLists.txt
transport/: CMakeLists.txt  tcpconn.cpp  tcpconn.h
util/: CMakeLists.txt  error.h  fileio.cpp  fileio.h
utils/: CMakeLists.txt  error.cpp  logger.h  threadpool.h
