cmake_minimum_required(VERSION 3.5)
project(LawfulNeutral)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "-fPIC")
set(CMAKE_C_FKAGS "-fPIC")

include_directories(/usr/local/include)
include_directories(./include)
include_directories(./posix)
include_directories(.)
include_directories(./reactor)
include_directories(./utils)
include_directories(./transport)
include_directories(./service)
include_directories(./highermq)

link_directories(/usr/local/lib)
link_directories(./posix/)
link_directories(./utils/)
link_directories(./reactor/)
link_directories(./transport/)
link_directories(./service/)
link_directories(./highermq/)

add_subdirectory(reactor)
add_subdirectory(example)
add_subdirectory(utils)
add_subdirectory(posix)

